Add quick implementation for encoding function declarations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ license = "MIT"
 [workspace]
 resolver = "2"
 members = [
-  "wtf-ast",
+  "wtf-ast", "wtf-encode",
   "wtf-parser", 
   "wtf-wasm"
 ]
