--- a/wtf-ast/Cargo.toml
+++ b/wtf-ast/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "wtf-ast"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+version.workspace = true
+license.workspace = true
 
 [dependencies]
