--- a/wtf-hir/Cargo.toml
+++ b/wtf-hir/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "wtf-hir"
-version = "0.1.0"
-edition = "2021"
 authors = ["Marcel Garus"]
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 wtf-ast = { path = "../wtf-ast" }
