Handle bool as separate expression type, handle none and never in wasm builder

--- a/wtf-compiler/Cargo.toml
+++ b/wtf-compiler/Cargo.toml
@@ -9,3 +9,5 @@ license.workspace = true
 wtf-ast = { path = "../wtf-ast" }
 wtf-parser = { path = "../wtf-parser" }
 wtf-hir = { path = "../wtf-hir" }
+wtf-encode = { path = "../wtf-encode" }
+wasmparser = "0.219.1"
