Add run command to compiler that executes a main function in the component

--- a/wtf-compiler/Cargo.toml
+++ b/wtf-compiler/Cargo.toml
@@ -11,3 +11,4 @@ wtf-parser = { path = "../wtf-parser" }
 wtf-hir = { path = "../wtf-hir" }
 wtf-encode = { path = "../wtf-encode" }
 wasmparser = "0.219.1"
+wasmtime = "26.0.1"
