Exclude broken record example

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
         example:
           [
             "./examples/loop.wtf",
-            "./examples/record.wtf",
+            # Include this once type-checking is implemented:
+            # "./examples/record.wtf",
             "./examples/string.wtf",
             "./examples/numeric.wtf",
             "./examples/conditional.wtf",
