--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Compile ${{ matrix.example }}
         working-directory: ./wtf-compiler
-        run: cargo run -- ${{ matrix.example }} -v
+        run: cargo run -- build ${{ matrix.example }} -v
       - name: Run ${{ matrix.example }}
         working-directory: ./wtf-compiler
-        run: cargo run -- ${{ matrix.example }} -v
+        run: cargo run -- run ${{ matrix.example }} -v
+      - name: Test ${{ matrix.example }}
+        working-directory: ./wtf-compiler
+        run: cargo run -- test ${{ matrix.example }} -v
