--- a/wtf-compiler/Cargo.toml
+++ b/wtf-compiler/Cargo.toml
@@ -9,6 +9,6 @@ license.workspace = true
 wtf-ast = { path = "../wtf-ast" }
 wtf-parser = { path = "../wtf-parser" }
 wtf-hir = { path = "../wtf-hir" }
-wtf-encode = { path = "../wtf-encode" }
+# wtf-encode = { path = "../wtf-encode" }
 wasmparser = "0.222.0"
 wasmtime = "28.0.0"
