--- a/wtf-error/Cargo.toml
+++ b/wtf-error/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "wtf-parser"
+name = "wtf-error"
 authors.workspace = true
 edition.workspace = true
 version.workspace = true
 license.workspace = true
 
 [dependencies]
-wtf-ast = { path = "../wtf-ast" }
 wtf-tokens = { path = "../wtf-tokens" }
-wtf-error = { path = "../wtf-error" }
