--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,6 @@ members = [
   "wtf-encode",
   "wtf-parser",
   "wtf-hir",
-  "wtf-wasm"
-, "wtf-format"]
+  "wtf-mir",
+  "wtf-wasm",
+  "wtf-format"]
