--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
             "./examples/string.wtf",
             "./examples/tests.wtf",
             "./examples/ufcs.wtf",
-            # "./examples/for.wtf",                  
+            "./examples/for.wtf",                  
             "./examples/logic.wtf",
             "./examples/optional.wtf",      
             # "./overload.wtf
